--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "deepmerge": "^4.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
@@ -44,5 +45,13 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.12"
+  },
+  "jest": {
+    "coveragePathIgnorePatterns": [
+      "__tests__/utilities/"
+    ],
+    "watchPathIgnorePatterns": [
+      "__tests__/utilities/"
+    ]
   }
 }
