--- a/client/package.json
+++ b/client/package.json
@@ -3,19 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.1",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "deepmerge": "^4.3.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^9.1.0",
-    "react-scripts": "5.0.1",
-    "redux": "^5.0.1",
-    "redux-thunk": "^3.1.0",
-    "socket.io-client": "^4.7.4",
-    "web-vitals": "^2.1.4"
+    "@reduxjs/toolkit": "latest",
+    "@testing-library/jest-dom": "latest",
+    "@testing-library/react": "latest",
+    "@testing-library/user-event": "latest",
+    "deepmerge": "latest",
+    "react": "latest",
+    "react-dom": "latest",
+    "react-redux": "latest",
+    "react-scripts": "latest",
+    "redux": "latest",
+    "redux-thunk": "latest",
+    "socket.io-client": "latest",
+    "web-vitals": "latest"
+  },
+  "devDependencies": {
+    "@types/jest": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,9 +45,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/jest": "^29.5.12"
   },
   "jest": {
     "coveragePathIgnorePatterns": [
