--- a/server/package.json
+++ b/server/package.json
@@ -11,12 +11,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.18.2",
-    "socket.io": "^4.7.4"
+    "express": "latest",
+    "socket.io": "latest"
   },
   "devDependencies": {
-    "jest": "^27.5.1",
-    "nodemon": "^3.0.3",
-    "supertest": "^6.3.4"
+    "jest": "latest",
+    "nodemon": "latest",
+    "supertest": "latest"
   }
 }
