--- a/client/package.json
+++ b/client/package.json
@@ -18,21 +18,17 @@
     "web-vitals": "latest"
   },
   "devDependencies": {
-    "@types/jest": "latest"
+    "@types/jest": "latest",
+    "customize-cra": "^1.0.0",
+    "react-app-rewired": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-app-rewired build",
     "test": "react-scripts test",
     "test:coverage": "react-scripts test --coverage",
     "test:coverage:all": "react-scripts test --coverage --watchAll",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -44,14 +40,6 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ]
-  },
-  "jest": {
-    "coveragePathIgnorePatterns": [
-      "__tests__/utilities/"
-    ],
-    "watchPathIgnorePatterns": [
-      "__tests__/utilities/"
     ]
   }
 }
