--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,7 @@
   },
   "devDependencies": {
     "@types/jest": "latest",
-    "customize-cra": "^1.0.0",
+    "customize-cra": "latest",
     "react-app-rewired": "latest"
   },
   "scripts": {
